--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1628,3 +1628,18 @@ volume={6},
 number={2},
 year={2008},
 pages={40--53}}
+
+@inproceedings{auraloss,
+    title={auraloss: {A}udio focused loss functions in {PyTorch}},
+    author={Steinmetz, Christian J. and Reiss, Joshua D.},
+    booktitle={Digital Music Research Network One-day Workshop (DMRN+15)},
+    year={2020}}
+
+@misc{roux2018sdr,
+      title={SDR - half-baked or well done?}, 
+      author={Jonathan Le Roux and Scott Wisdom and Hakan Erdogan and John R. Hershey},
+      year={2018},
+      eprint={1811.02508},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
