--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1643,3 +1643,49 @@ pages={40--53}}
       archivePrefix={arXiv},
       primaryClass={cs.SD}
 }
+
+@article{Kessy_2018,
+   title={Optimal Whitening and Decorrelation},
+   volume={72},
+   ISSN={1537-2731},
+   url={http://dx.doi.org/10.1080/00031305.2016.1277159},
+   DOI={10.1080/00031305.2016.1277159},
+   number={4},
+   journal={The American Statistician},
+   publisher={Informa UK Limited},
+   author={Kessy, Agnan and Lewin, Alex and Strimmer, Korbinian},
+   year={2018},
+   pages={309–314}
+}
+
+@article{wiener2,
+author={Duong, Ngoc Q. K. and Vincent, Emmanuel and Gribonval, Rémi},
+journal={IEEE Transactions on Audio, Speech, and Language Processing},
+title={Under-Determined Reverberant Audio Source Separation Using a Full-Rank Spatial Covariance Model},
+year={2010},
+volume={18},
+number={7},
+pages={1830-1840},
+doi={10.1109/TASL.2010.2050716},
+url={https://hal.inria.fr/inria-00435807v2/document}
+}
+
+@article{wiener3,
+author = {Nugraha, Aditya and Liutkus, Antoine and Vincent, Emmanuel},
+year = {2015},
+month = {06},
+pages = {},
+title = {Multichannel Audio Source Separation With Deep Neural Networks},
+volume = {24},
+journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+doi = {10.1109/TASLP.2016.2580946}
+}
+
+@inproceedings{wiener4,
+author = {Nugraha, Aditya and Liutkus, Antoine and Vincent, Emmanuel},
+year = {2016},
+month = {08},
+pages = {1748-1752},
+title = {Multichannel music separation with deep neural networks},
+doi = {10.1109/EUSIPCO.2016.7760548}
+}
